--- a/products/bg.html
+++ b/products/bg.html
@@ -132,58 +132,9 @@
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p>The Neutrone® BG range has been designed to international standard ISO2858 ensuring a sturdy and reliable, long lasting, high performance product.</p>
-										<p class="pb_30">Design Features:</p>
+										<p>Neutrone® BG Series is an ISO 2858-compliant end-suction centrifugal pump designed for high efficiency and reliable performance in industrial applications. Built to meet international standards, this pump ensures consistent hydraulic performance, easy interchangeability, and robust construction. It is ideal for handling clean or slightly contaminated liquids in industries such as water treatment, chemical processing, HVAC, and general manufacturing.</p>
 									</div>
 								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-sm-6">
-							<div class="product-details-box">
-								<div class="product-details-desc">
-									<div class="product-details-title">
-										<h4>Bronze Wear Rings</h4>
-									</div>
-									<div class="products-detials-desc">
-										<p>Fitted as standard, replaceable front and rear wear rings with optional materials, for a trouble-free lifecycle.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-sm-6">
-							<div class="product-details-box">
-								<div class="product-details-desc">
-									<div class="product-details-title">
-										<h4>Impeller</h4>
-									</div>
-									<div class="products-detials-desc">
-										<p>Cast iron closed design is fitted as standard to prevent corrosion in stationary. Cast SS304 or SS316 are available on request. Impeller diameters can be trimmed to specified performance. BG series impellers are dynamically balanced, vibration free operation, preventing premature bearing failure.</p>
-									</div>
-								</div>								
-							</div>
-						</div>
-						<div class="col-lg-6 col-sm-6">
-							<div class="product-details-box">							
-								<div class="product-details-desc">
-									<div class="product-details-title">
-										<h4>Pump Casing</h4>
-									</div>
-									<div class="products-detials-desc">
-										<p>Highly efficient cast iron volute casings, with flanges rated to PN16.</p>
-									</div>
-								</div>	
-							</div>
-						</div>
-						<div class="col-lg-6 col-sm-6">
-							<div class="product-details-box">							
-								<div class="product-details-desc">
-									<div class="product-details-title">
-										<h4>Casing O-ring</h4>
-									</div>
-									<div class="products-detials-desc">
-										<p>Reusable o-rings quality Neutrone or approved equivalent mechanical seal with carbong vs ceramic fitted as standard to all BG series pumps with other options such as silicone vs silicone or high temperature also available.</p>
-									</div>
-								</div>	
 							</div>
 						</div>
 					</div>
