--- a/products/bp.html
+++ b/products/bp.html
@@ -132,9 +132,7 @@
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p>Volute casing centrifugal end suction pump with Black Pull-Out (BPO) feature, main dimensions and performance according to EN733/DIN24255 standards</p>
-										<p class="pb_30">Applications:</p>
-										<p>Neutrone® pumps can be used for the following serivecs in the commercial, residential, agricultural, industrial, process, petroleum, and food & beverages industries </p>
+										<p>Neutrone® BPS Series is a cast iron end-suction centrifugal pump featuring a Back Pull Out (BPO) design for easy maintenance and serviceability. Its robust cast iron construction ensures durability and reliability, making it ideal for handling various industrial fluids. The BPO feature allows for quick disassembly of the rotating components without disturbing the piping, minimizing downtime and reducing maintenance costs.</p>
 									</div>
 								</div>
 							</div>
