--- a/products/bps.html
+++ b/products/bps.html
@@ -132,16 +132,8 @@
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p>Volute casing centrifugal end suction pump with Back Pull-Out (BPO) feature, main dimensions and performance according to EN733/DIN24255 standards.</p>
-										<p class="pb_30">Key Features:</p>
+										<p>Neutrone® BPS Series is a stainless steel end-suction centrifugal pump designed with Back Pull Out (BPO) features for easy maintenance and serviceability. Its stainless steel construction ensures excellent corrosion resistance, making it ideal for handling various liquids in industrial and hygienic applications. The BPO design allows for quick disassembly of the rotating elements without disturbing the piping, reducing downtime and maintenance costs</p>
 									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-12">
-							<div class="product-details-content">
-								<div class="product-details-desc">
-									<p>Neutrone BPS pumps can be used for the following services in the commercial, residential, agricultural, industrial, process, petroleum, and food and beverages industries.</p>
 								</div>
 							</div>
 						</div>
