--- a/products/ea.html
+++ b/products/ea.html
@@ -109,7 +109,7 @@
 						<li><i class="fas fa-house-user"></i><a href="../index.html">Home</a></li>
 						<li><a href="../products.html">Products</a></li>
 						<li><a href="../pumps.html">Pumps</a></li>
-						<li>EA Series</li>
+						<li>EAS Series</li>
 					</ul>
 				</div>
 			</div>
@@ -125,15 +125,14 @@
 						<div class="col-lg-12 col-sm-12">
 							<div class="product-details-content">
 								<div class="product-page-title">
-									<h1>EA Series</h1>
+									<h1>EAS Series</h1>
 								</div>
 								<div class="product-thumb">
 									<img src="../assets/images/products/eas-1.png" alt="">
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p>EAS stainless steel horizontal single stage centrifugal pump, suitable for various mediums including water or industrial liquids. Manufactured in AISI 304 or AISI 316 stainless steel in compliance with EN733 DIN 24555</p>
-										<p class="pb_30">Key Features:</p>
+										<p>Neutrone® EAS Series is a stainless steel, single-stage horizontal pump designed for efficient and reliable fluid transfer. Engineered for durability and corrosion resistance, this pump is ideal for applications requiring hygienic, high-performance liquid handling across various industries.</p>
 									</div>
 								</div>
 							</div>
