--- a/products/cl.html
+++ b/products/cl.html
@@ -109,7 +109,7 @@
 						<li><i class="fas fa-house-user"></i><a href="../index.html">Home</a></li>
 						<li><a href="../products.html">Products</a></li>
 						<li><a href="../pumps.html">Pumps</a></li>
-						<li>CL Series</li>
+						<li>CLL Series</li>
 					</ul>
 				</div>
 			</div>
@@ -125,14 +125,14 @@
 						<div class="col-lg-12 col-sm-12">
 							<div class="product-details-content">
 								<div class="product-page-title">
-									<h1>CL Series</h1>
+									<h1>CLL Series</h1>
 								</div>
 								<div class="product-thumb">
 									<img src="../assets/images/products/cl-1.png" alt="">
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p>CL pumps combine the advantages of open impeller with SUS304 stainless steel construction, which is particularly suited for handling moderately aggressive liquids with suspended solids.</p>
+										<p>Neutrone® CLL Series is a semi-open impeller, close-coupled, end-suction centrifugal pump designed for efficient and reliable fluid transfer. Its semi-open impeller design allows for better handling of solids and viscous fluids, while the close-coupled configuration ensures a compact footprint and easy installation. This pump is ideal for applications requiring high efficiency, durability, and minimal maintenance.</p>
 									</div>
 								</div>
 							</div>
@@ -147,7 +147,7 @@
 							<h4> Downloads </h4>
 						</div>
 						<div class="pdf-button">
-							<a target="_blank" href="../assets/docs/cl_brochure.pdf"><img src="../assets/images/resource/pdf.png" alt="">Brochure<i class="bi bi-chevron-bar-down"></i></a>
+							<a target="_blank" href="../assets/docs/cll_brochure.pdf"><img src="../assets/images/resource/pdf.png" alt="">Brochure<i class="bi bi-chevron-bar-down"></i></a>
 						</div>
 					</div>
 				</div>
