--- a/products/dw.html
+++ b/products/dw.html
@@ -109,7 +109,7 @@
 						<li><i class="fas fa-house-user"></i><a href="../index.html">Home</a></li>
 						<li><a href="../products.html">Products</a></li>
 						<li><a href="../pumps.html">Pumps</a></li>
-						<li>QQT Series</li>
+						<li>DW Series</li>
 					</ul>
 				</div>
 			</div>
@@ -125,14 +125,14 @@
 						<div class="col-lg-12 col-sm-12">
 							<div class="product-details-content">
 								<div class="product-page-title">
-									<h1>QQT Series</h1>
+									<h1>DW Series</h1>
 								</div>
 								<div class="product-thumb">
-									<img src="../assets/images/products/qqt-1.png" alt="">
+									<img src="../assets/images/products/dw-1.png" alt="">
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p>Neutrone® QQT Series is a semi-open impeller, end-suction centrifugal pump designed for efficient fluid handling in various industrial applications. Its semi-open impeller design allows for better handling of solids and viscous liquids, making it ideal for applications requiring high efficiency, reliability, and durability.</p>
+										<p>Neutrone® DW Series is an Air-Operated Double Diaphragm (AODD) pump, a type of positive displacement pump powered by compressed air. It is widely used across various industries for the efficient transfer of corrosive, abrasive, and viscous fluids.</p>
 									</div>
 								</div>
 							</div>
@@ -147,7 +147,7 @@
 							<h4> Downloads </h4>
 						</div>
 						<div class="pdf-button">
-							<a target="_blank" href="../assets/docs/qqt_brochure.pdf"><img src="../assets/images/resource/pdf.png" alt="">Brochure<i class="bi bi-chevron-bar-down"></i></a>
+							<a target="_blank" href="../assets/docs/dw_brochure.pdf"><img src="../assets/images/resource/pdf.png" alt="">Brochure<i class="bi bi-chevron-bar-down"></i></a>
 						</div>
 					</div>
 				</div>
