--- a/pumps.html
+++ b/pumps.html
@@ -181,21 +181,9 @@
 						<a href="products/cl.html"><img src="assets/images/products/cl-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
-						<a href="products/cl.html">CL Series</a>
+						<a href="products/cl.html">CLL Series</a>
 						<p></p>
                         <a class="product-button" href="products/cl.html">View Product</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 grid-item mixer">
-				<div class="single-product-box">
-					<div class="product-thumb">
-						<a href="products/ncsp.html"><img src="assets/images/products/ncsp-1.png" alt=""></a>
-					</div>
-					<div class="products-content">
-						<a href="products/ncsp.html">NCSP Series</a>
-						<p></p>
-                        <a class="product-button" href="products/ncsp.html">View Product</a>
 					</div>
 				</div>
 			</div>
@@ -217,9 +205,45 @@
 						<a href="products/ea.html"><img src="assets/images/products/eas-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
-						<a href="products/ea.html">EA Series</a>
+						<a href="products/ea.html">EAS Series</a>
 						<p></p>
                         <a class="product-button" href="products/ea.html">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item mixer">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<a href="products/dw.html"><img src="assets/images/products/dw-1.png" alt=""></a>
+					</div>
+					<div class="products-content">
+						<a href="products/dw.html">DW Series</a>
+						<p></p>
+                        <a class="product-button" href="products/dw.html">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item mixer">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<a href="products/cvm.html"><img src="assets/images/products/cvm-1.png" alt=""></a>
+					</div>
+					<div class="products-content">
+						<a href="products/cvm.html">CVM/CVMS/CVMZ Series</a>
+						<p></p>
+                        <a class="product-button" href="products/cvm.html">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item mixer">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<a href="products/xr.html"><img src="assets/images/products/xr-1.png" alt=""></a>
+					</div>
+					<div class="products-content">
+						<a href="products/xr.html">XR Series</a>
+						<p></p>
+                        <a class="product-button" href="products/xr.html">View Product</a>
 					</div>
 				</div>
 			</div>
