--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 <div class="about-area">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-9 col-md-6">
+			<div class="col-lg-12 col-md-6">
 				<div class="section-title">
 					<h1>Our Story</h1>
-					<p class="section-text">Regional organization recognized for its expertise in the design, manufacture, and customization of fluid agitation equipment and systems.</p>
+					<p class="section-text offset-lg-3">Regional organization recognized for its expertise in the design, manufacture, and customization of fluid agitation equipment and systems.</p>
 				</div>
 			</div>
 			<div class="em-bar"></div> 
