--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
 			<div class="col-lg-12 col-md-6">
 				<div class="section-title">
 					<h1>Our Story</h1>
-					<p class="section-text offset-lg-3">Regional organization recognized for its expertise in the design, manufacture, and customization of fluid agitation equipment and systems.</p>
+					<p class="section-text text-center offset-lg-2">Regional organization recognized for its expertise in the design, manufacture, and customization of fluid agitation equipment and systems.</p>
 				</div>
 			</div>
 			<div class="em-bar"></div> 
 		</div>
 		<div class="row">
 			<div class="col-lg-6">
-				<div class="about-item">
+				<div class="about-item text-justify">
 					<p class="about-desc">With over two decades of experience, we specialize in providing innovative solutions tailored to meet the unique needs of our clients across various industries.</p>
 
 					<p>Established a strong presence in major industry segments, delivering customized fluid agitation solutions that meet the diverse needs of our clients globally.
