--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="row align-items-center">
 			<div class="col-md-2">
 				<div class="header-logo">
-					<a href="index.html"><img src="assets/images/logo1.png" alt="logo"></a>
+					<a href="index.html"><img style="w-100" src="assets/images/logo1.png" alt="logo"></a>
 				</div>
 			</div>
 			<div class="col-md-7">
