--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="row align-items-center">
 			<div class="col-md-2">
 				<div class="header-logo">
-					<a href="index.html"><img style="w-100" src="assets/images/logo1.png" alt="logo"></a>
+					<a href="index.html"><img class="w-100" src="assets/images/logo1.png" alt="logo"></a>
 				</div>
 			</div>
 			<div class="col-md-7">
@@ -89,10 +89,10 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-6">
-				<div class="about-item text-justify">
-					<p class="about-desc">With over two decades of experience, we specialize in providing innovative solutions tailored to meet the unique needs of our clients across various industries.</p>
+				<div class="about-item">
+					<p class="about-desc text-justify">With over two decades of experience, we specialize in providing innovative solutions tailored to meet the unique needs of our clients across various industries.</p>
 
-					<p>Established a strong presence in major industry segments, delivering customized fluid agitation solutions that meet the diverse needs of our clients globally.
+					<p class="text-justify">Established a strong presence in major industry segments, delivering customized fluid agitation solutions that meet the diverse needs of our clients globally.
 					</p>
 				</div>
 			</div>
