--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<a href="index.html"><img class="w-100" src="assets/images/logo1.png" alt="logo"></a>
 				</div>
 			</div>
-			<div class="col-md-7">
+			<div class="d-flex justify-content-end col-md-7">
 				<div class="header-menu">
 					<ul class="nav_scroll">
 						<li><a href="index.html">Home</a></li>
