--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-6">
-				<div class="about-item">
-					<p class="about-desc text-justify">With over two decades of experience, we specialize in providing innovative solutions tailored to meet the unique needs of our clients across various industries.</p>
+				<div class="about-item" style="text-align:justify">
+					<p class="about-desc">With over two decades of experience, we specialize in providing innovative solutions tailored to meet the unique needs of our clients across various industries.</p>
 
-					<p class="text-justify">Established a strong presence in major industry segments, delivering customized fluid agitation solutions that meet the diverse needs of our clients globally.
+					<p>Established a strong presence in major industry segments, delivering customized fluid agitation solutions that meet the diverse needs of our clients globally.
 					</p>
 				</div>
 			</div>
