--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 			<div class="col-lg-4 col-md-6">
 				<div class="single-counter-box">
 					<div class="counter-content">
-						<h4 class="counter">124</h4>
+						<h4 class="counter">148</h4>
 						<p>Projects Completed</p>
 					</div>
 				</div>
@@ -284,7 +284,7 @@
 			<div class="col-lg-4 col-md-6">
 				<div class="single-counter-box">
 					<div class="counter-content">
-						<h4 class="counter">244</h4>
+						<h4 class="counter">268</h4>
 						<p>Customers</p>
 					</div>
 				</div>
@@ -569,7 +569,7 @@
 			<div class="row align-items-center">
 				<div class="col-md-6">
 					<div class="footer-bottom-content">
-				    	<p>Copyright © Trimax Century all rights reserved.</p>
+				    	<p>Copyright © Trimax Century Sdn. Bhd. All Rights Reserved.</p>
 					</div>
 			    </div>	
 			    <div class="col-md-6">
