--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			<div class="em-bar"></div> 
 		</div>
 		<div class="row">
-			<div class="col-lg-7">
+			<div class="col-lg-7 offset-lg-2">
 				<div class="about-item" style="text-align:justify">
 					<p class="about-desc">With over two decades of experience, we specialize in providing innovative solutions tailored to meet the unique needs of our clients across various industries.</p>
 
