--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 		<nav class="header-menu">
 			<ul class="nav_scroll">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">Corporate Information</a></li>
+				<li><a href="about.html">About Us</a></li>
 				<li><a href="products.html">Products</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="careers.html">Careers</a></li>
-				<li><a href="contact.html">Contacts</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
 	</div>
