--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row" style="text-align:justify">
 			<div class="col-lg-4 col-md-6">
 				<div class="feature-signle-item">
 					<div class="fature-signe-iiner">
