--- a/products.html
+++ b/products.html
@@ -30,54 +30,27 @@
 </head>
 <body>
 
-<div class="top-bar-area">
+<div class="top-bar-area header-area" id="sticky-header">
 	<div class="container">
 		<div class="row align-items-center">
-			<div class="col-md-4">
+			<div class="col-md-2">
 				<div class="header-logo">
-					<a href="index.html"><img src="assets/images/logo1.png" alt="logo"></a>
+					<a href="index.html"><img class="w-100" src="assets/images/logo1.png" alt="logo"></a>
 				</div>
 			</div>
-			<div class="col-md-8">
-				<div class="top-bar-info text-end">
-					<ul class="d-inline-flex align-items-center">
-						<li>
-							<div class="d-inline-flex">
-								<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
-								<p class="mb-0 text-light">
-									Contact Us
-									<span class="d-block fw-bold text-dark">+603-8062 5093</span>
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="header-search-button search-box-outer">
-								<a href="#"><i class="bi bi-search"></i></a>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="header-area" id="sticky-header">
-	<div class="container">
-		<div class="row align-items-center">
-			<div class="col-md-9">
+			<div class="d-flex justify-content-end col-md-8">
 				<div class="header-menu">
 					<ul class="nav_scroll">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">Corporate Information</a></li>
+						<li><a href="about.html">About Us</a></li>
 						<li><a href="products.html">Products</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="careers.html">Careers</a></li>
-						<li><a href="contact.html">Contacts</a></li>
+						<li><a href="contact.html">Contacts Us</a></li>
 					</ul>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-2">
 				<div class="header-button">
 					<a href="contact.html#contact_form">Get a Quote</a>
 				</div>
@@ -91,11 +64,11 @@
 		<nav class="header-menu">
 			<ul class="nav_scroll">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">Corporate Information</a></li>
+				<li><a href="about.html">About Us</a></li>
 				<li><a href="products.html">Products</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="careers.html">Careers</a></li>
-				<li><a href="contact.html">Contacts</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -138,7 +111,7 @@
 			</div>
 		</div>
 		<div class="row image_load">
-			<div class="col-lg-4 grid-item">
+			<div class="col-lg-3 grid-item">
 				<div class="single-product-box">
 					<div class="product-thumb">
 						<img src="assets/images/resource/mixers.png" alt="">
@@ -149,18 +122,18 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 grid-item">
+			<div class="col-lg-6 grid-item">
 				<div class="single-product-box">
 					<div class="product-thumb">
 						<img src="assets/images/resource/mixers.png" alt="">
 					</div>
 					<div class="products-content">
 						<a class="mb-3" target="_blank" href="assets/docs/general.pdf">Neutrone® Mixers</a>
-                        <a class="product-button" target="_blank" href="assets/docs/general.pdf">View Brochure</a>
+                        <a class="product-button" target="_blank" href="assets/docs/general.pdf">View General Brochure</a>
 					</div>
 				</div>
 			</div>					
-			<div class="col-lg-4 grid-item">
+			<div class="col-lg-3 grid-item">
 				<div class="single-product-box">
 					<div class="product-thumb">
 						<img src="assets/images/resource/pumps.png" alt="">
