--- a/products.html
+++ b/products.html
@@ -127,9 +127,9 @@
 					<div class="product-thumb">
 						<img src="assets/images/resource/mixers.png" alt="">
 					</div>
-					<div class="products-content">
+					<div class="products-content" style="flex-flow: column wrap;align-items: flex-start;display: flex;">
 						<a class="mb-3" target="_blank" href="assets/docs/general.pdf">Neutrone® Mixers</a>
-                        <a class="product-button" target="_blank" href="assets/docs/general.pdf">View General Brochure</a>
+                        <a class="product-button" style="align-self: flex-start;" target="_blank" href="assets/docs/general.pdf">View General Brochure</a>
 					</div>
 				</div>
 			</div>					
