--- a/products/n1.html
+++ b/products/n1.html
@@ -282,7 +282,7 @@
 			<div class="row align-items-center">
 				<div class="col-md-6">
 					<div class="footer-bottom-content">
-				    	<p>Copyright © Trimax Century all rights reserved.</p>
+				    	<p>Copyright © Trimax Century Sdn. Bhd. All Rights Reserved.</p>
 					</div>
 			    </div>	
 			    <div class="col-md-6">
