--- a/products/n1.html
+++ b/products/n1.html
@@ -32,7 +32,7 @@
 		<div class="row align-items-center">
 			<div class="col-md-2">
 				<div class="header-logo">
-					<a href="index.html"><img class="w-100" src="../assets/images/logo1.png" alt="logo"></a>
+					<a href="../index.html"><img class="w-100" src="../assets/images/logo1.png" alt="logo"></a>
 				</div>
 			</div>
 			<div class="d-flex justify-content-end col-md-8">
