--- a/products/n1.html
+++ b/products/n1.html
@@ -113,7 +113,7 @@
 								<div class="product-details-content">
 									<div class="product-details-desc">
 										<p><b>Neutrone® Top Entry (Light/Medium/Heavy Duty) Mixers, N Series</b> are designed to efficiently handle a range of mixing tasks, from light to medium viscosity materials, with capabilities for both high flow and high shear agitation. These mixers are ideal for small batch operations as well as continuous processes, providing versatility across different industrial applications.</p>
-										<p class="pb_30">Key Features:</p>
+										<p class="pb_30">Key Features & Benefits</p>
 									</div>
 								</div>
 							</div>
@@ -125,7 +125,7 @@
 										<h4>Direct Drive (N1 & N3 Series)</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>These mixers offer direct drive systems that provide reliable performance and are designed for ease of use in applications where efficient and high-speed mixing is required.</p>
+										<p>Offer direct drive systems that provide reliable performance and are designed for ease of use in applications where efficient and high-speed mixing is required.</p>
 									</div>
 								</div>
 							</div>
@@ -137,7 +137,7 @@
 										<h4>Gear Reduction (N2 & N5 Series)</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>The gear-reduced versions of the mixers (N2 & N5) are designed to deliver higher torque, making them suitable for applications requiring lower speeds with more force. This setup ensures consistent and reliable mixing, particularly for higher viscosity materials.</p>
+										<p>Designed to deliver higher torque, making them suitable for applications requiring lower speeds with more force. This setup ensures consistent and reliable mixing, particularly for higher viscosity materials.</p>
 									</div>
 								</div>								
 							</div>
@@ -149,7 +149,7 @@
 										<h4>Low Operating Costs</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>Neutrone® mixers are designed for cost-effective operation, with a focus on minimizing maintenance and energy consumption while maximizing performance.</p>
+										<p>Designed for cost-effective operation, with a focus on minimizing maintenance and energy consumption while maximizing performance.</p>
 									</div>
 								</div>	
 							</div>
@@ -161,7 +161,7 @@
 										<h4>Durability and Long Life</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>Built for longevity, Neutrone® mixers are engineered to withstand rigorous industrial environments, ensuring long-term, trouble-free operation.</p>
+										<p>Engineered to withstand rigorous industrial environments, ensuring long-term, trouble-free operation.</p>
 									</div>
 								</div>	
 							</div>
@@ -169,7 +169,7 @@
 						<div class="col-lg-12">
 							<div class="product-details-content">
 								<div class="product-details-desc">
-									<p>These mixers deliver consistent, high-quality mixing results, whether in batch or continuous processing environments, at a competitive price point.</p>
+									<p><b>Neutrone® Top Entry (Light/Medium/Heavy Duty) Mixers, N Series</b> deliver deliver consistent, high-quality mixing results, whether in batch or continuous processing environments, at a competitive price point.</p>
 								</div>
 							</div>
 						</div>
