--- a/products/np.html
+++ b/products/np.html
@@ -27,76 +27,49 @@
 
 <body>
 
-	<div class="top-bar-area">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-4">
-					<div class="header-logo">
-						<a href="../index.html"><img src="../assets/images/logo1.png" alt="logo"></a>
-					</div>
+<div class="top-bar-area header-area" id="sticky-header">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-2">
+				<div class="header-logo">
+					<a href="../index.html"><img class="w-100" src="../assets/images/logo1.png" alt="logo"></a>
 				</div>
-				<div class="col-md-8">
-					<div class="top-bar-info text-end">
-						<ul class="d-inline-flex align-items-center">
-							<li>
-								<div class="d-inline-flex">
-									<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
-									<p class="mb-0 text-light">
-										Contact Us
-										<span class="d-block fw-bold text-dark">+603-8062 5093</span>
-									</p>
-								</div>
-							</li>
-							<li>
-								<div class="header-search-button search-box-outer">
-									<a href="#"><i class="bi bi-search"></i></a>
-								</div>
-							</li>
-						</ul>
-					</div>
+			</div>
+			<div class="d-flex justify-content-end col-md-8">
+				<div class="header-menu">
+					<ul class="nav_scroll">
+						<li><a href="../index.html">Home</a></li>
+						<li><a href="../about.html">About Us</a></li>
+						<li><a href="../products.html">Products</a></li>
+						<li><a href="../gallery.html">Gallery</a></li>
+						<li><a href="../careers.html">Careers</a></li>
+						<li><a href="../contact.html">Contacts Us</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-md-2">
+				<div class="header-button">
+					<a href="../contact.html#contact_form">Get a Quote</a>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 
-	<div class="header-area" id="sticky-header">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-9">
-					<div class="header-menu">
-						<ul class="nav_scroll">
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="../about.html">Corporate Information</a></li>
-							<li><a href="../products.html">Products</a></li>
-							<li><a href="../gallery.html">Gallery</a></li>
-							<li><a href="#">Careers</a></li>
-							<li><a href="../contact.html">Contacts</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="header-button">
-						<a href="../contact.html#contact_form">Get a Quote</a>
-					</div>
-				</div>
-			</div>
-		</div>
+<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
+	<div class="mobile-menu">
+		<nav class="header-menu">
+			<ul class="nav_scroll">
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="../about.html">About Us</a></li>
+				<li><a href="../products.html">Products</a></li>
+				<li><a href="../gallery.html">Gallery</a></li>
+				<li><a href="../careers.html">Careers</a></li>
+				<li><a href="../contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
 	</div>
-
-	<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
-		<div class="mobile-menu">
-			<nav class="header-menu">
-				<ul class="nav_scroll">
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="../about.html">Corporate Information</a></li>
-					<li><a href="../products.html">Products</a></li>
-					<li><a href="../gallery.html">Gallery</a></li>
-					<li><a href="#">Careers</a></li>
-					<li><a href="../contact.html">Contacts</a></li>
-				</ul>
-			</nav>
-		</div>
-	</div>
+</div>
 
 
 <div class="breadcumb-area d-flex align-items-center">
@@ -132,8 +105,8 @@
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p><strong>Neutrone® Heavy Duty Mixers (NP Series)</strong> are expertly designed for a wide range of process industries, including chemical, waste & water treatment, pulp and paper, oil & gas, petrochemical, edible oil, and oleochemical plants. These mixers are built to handle demanding applications, from high-viscosity blending to reactor processes, ensuring efficient and reliable operation across various industrial sectors.</p>
-										<p class="pb_30"><strong>Key Features and Benefits of the NP Series Mixers:</strong></p>
+										<p><strong>Neutrone® Top Entry (Heavy Duty) Mixers, NP Series</strong> are expertly designed for a wide range of process industries, including chemical, waste & water treatment, pulp and paper, oil & gas, petrochemical, edible oil, and oleochemical plants. These mixers are built to handle demanding applications, from high-viscosity blending to reactor processes, ensuring efficient and reliable operation across various industrial sectors.</p>
+										<p class="pb_30"><strong>Key Features and Benefits:</strong></p>
 									</div>
 								</div>
 							</div>
@@ -213,7 +186,7 @@
 						<div class="col-lg-12">
 							<div class="product-details-content">
 								<div class="product-details-desc">
-									<p><strong>The NP Series by Neutrone®</strong> offers a perfect blend of high performance, durability, and cost-effectiveness, making it a top choice for industries looking to improve process efficiency while minimizing maintenance and operating costs.</p>
+									<p><strong>Neutrone® Top Entry (Heavy Duty) Mixers, (NP Series)</strong> offers a perfect blend of high performance, durability, and cost-effectiveness, making it a top choice for industries looking to improve process efficiency while minimizing maintenance and operating costs.</p>
 								</div>
 							</div>
 						</div>
@@ -326,7 +299,7 @@
 			<div class="row align-items-center">
 				<div class="col-md-6">
 					<div class="footer-bottom-content">
-				    	<p>Copyright © Trimax Century all rights reserved.</p>
+				    	<p>Copyright © Trimax Century Sdn. Bhd. All Rights Reserved.</p>
 					</div>
 			    </div>	
 			    <div class="col-md-6">
