--- a/products/n5se.html
+++ b/products/n5se.html
@@ -27,76 +27,7 @@
 
 <body>
 
-	<div class="top-bar-area">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-4">
-					<div class="header-logo">
-						<a href="../index.html"><img src="../assets/images/logo1.png" alt="logo"></a>
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div class="top-bar-info text-end">
-						<ul class="d-inline-flex align-items-center">
-							<li>
-								<div class="d-inline-flex">
-									<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
-									<p class="mb-0 text-light">
-										Contact Us
-										<span class="d-block fw-bold text-dark">+603-8062 5093</span>
-									</p>
-								</div>
-							</li>
-							<li>
-								<div class="header-search-button search-box-outer">
-									<a href="#"><i class="bi bi-search"></i></a>
-								</div>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="header-area" id="sticky-header">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-9">
-					<div class="header-menu">
-						<ul class="nav_scroll">
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="../about.html">Corporate Information</a></li>
-							<li><a href="../products.html">Products</a></li>
-							<li><a href="../gallery.html">Gallery</a></li>
-							<li><a href="#">Careers</a></li>
-							<li><a href="../contact.html">Contacts</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="header-button">
-						<a href="../contact.html#contact_form">Get a Quote</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
-		<div class="mobile-menu">
-			<nav class="header-menu">
-				<ul class="nav_scroll">
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="../about.html">Corporate Information</a></li>
-					<li><a href="../products.html">Products</a></li>
-					<li><a href="../gallery.html">Gallery</a></li>
-					<li><a href="#">Careers</a></li>
-					<li><a href="../contact.html">Contacts</a></li>
-				</ul>
-			</nav>
-		</div>
-	</div>
+Neutrone® Top Entry (Heavy Duty) Mixers, (NP Series) 
 
 
 <div class="breadcumb-area d-flex align-items-center">
@@ -132,8 +63,8 @@
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p>Neutrone® Side Entry Mixers (N5SE Series) are designed to provide reliable, efficient, and safe mixing solutions for large-scale industrial applications. These gear-driven mixers are equipped with a shut-off device for added safety and ease of operation especially useful in situations where top-entry mixers would be inefficient or impractical, offering a range of benefits and key features. Here’s a detailed overview:</p>
-										<p class="pb_30"><strong>Key Features of the Neutrone® N5SE Series Side Entry Mixers:</strong></p>
+										<p><strong>Neutrone® Side Entry Mixer, N5SE Series</strong> are designed to provide reliable, efficient, and safe mixing solutions for large-scale industrial applications. Equipped with a shut-off device for added safety and ease of operation especially useful in situations where top-entry mixers would be inefficient or impractical.</p>
+										<p class="pb_30"><strong>Key Features & Benefits:</strong></p>
 									</div>
 								</div>
 							</div>
@@ -145,7 +76,7 @@
 										<h4>Gear-Driven Design</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>The N5SE Series utilizes a gear-driven system, providing strong, consistent mixing performance. This design ensures durability and low maintenance, making it ideal for demanding industrial processes.</p>
+										<p>Utilizes a gear-driven system, providing strong, consistent mixing performance. With durability and low maintenance, making it ideal for demanding industrial processes.</p>
 									</div>
 								</div>
 							</div>
@@ -157,7 +88,7 @@
 										<h4>Shut-Off Device for Safety</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>A shut-off device is included in these mixers, enhancing safety during operation. It allows the mixer to be easily disconnected for maintenance or when it’s not in use, preventing accidental operation and ensuring greater safety for personnel.</p>
+										<p>A shut-off device is included to enhanced safety during operation. It allows easily disconnected for maintenance, preventing accidental operation and ensuring greater safety for personnel.</p>
 									</div>
 								</div>								
 							</div>
@@ -336,7 +267,7 @@
 			<div class="row align-items-center">
 				<div class="col-md-6">
 					<div class="footer-bottom-content">
-				    	<p>Copyright © Trimax Century all rights reserved.</p>
+				    	<p>Copyright © Trimax Century Sdn. Bhd. All Rights Reserved.</p>
 					</div>
 			    </div>	
 			    <div class="col-md-6">
