--- a/products/n5se.html
+++ b/products/n5se.html
@@ -166,7 +166,7 @@
 										<h4>Efficient and Uniform Mixing</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>Despite their compact design, side-entry mixers can provide powerful and uniform mixing, ensuring that the contents of the tank are thoroughly blended. This is especially critical in applications where consistent material flow or uniformity is required, such as in chemical processing, wastewater treatment, and other industrial applications.</p>
+										<p>Compact design and able to provide powerful and uniform mixing, ensuring that the contents of the tank are thoroughly blended. This is especially critical in applications where consistent material flow or uniformity is required, such as in chemical processing, wastewater treatment, and other industrial applications.</p>
 									</div>
 								</div>	
 							</div>
@@ -185,18 +185,15 @@
 						</div>
 						<div class="col-lg-12">
 							<div class="product-details-content">
-								<div class="product-page-title2">
-									<h1>Benefits of Neutrone® N5SE Side Entry Mixers:</h1>
-								</div>
 								<div class="product-details-desc">
 									<ul>
-										<li><strong>Space Efficiency: </strong> Side-entry mixers are ideal for installations where space is limited or where access from above (as required for top-entry mixers) is not possible.</li>
+										<li><strong>Space Efficiency: </strong> Ideal for installations where space is limited or where access from above (as required for top-entry mixers) is not possible.</li>
 										<li><strong>High Efficiency:</strong> These mixers provide consistent, high-efficiency mixing with minimal pressure drop. The radial mixing action ensures optimal blending of fluids and solids in a wide range of applications.</li>
-										<li><strong>Lower Capital Investment: </strong> For large tank installations, side-entry mixers like the Neutrone® N5SE Series can be more affordable compared to top-entry mixers due to simpler installation and fewer mechanical components.</li>
+										<li><strong>Lower Capital Investment: </strong> For large tank installations and can be more affordable compared to top-entry mixers due to simpler installation and fewer mechanical components.</li>
 										<li><strong>Improved Safety: </strong> The built-in shut-off device offers an added layer of protection, ensuring operators can easily isolate the mixer during maintenance or when it's not in use, minimizing the risk of accidents.</li>
-										<li><strong>Cost-Efficiency: </strong> The N5SE Series offers a cost-effective solution for large tank mixing, providing high efficiency without the need for complex shaft systems, which are typically required in tall or deep tanks.</li>
+										<li><strong>Cost-Efficiency: </strong> Offers a cost-effective solution for large tank mixing, providing high efficiency without the need for complex shaft systems, which are typically required in tall or deep tanks.</li>
 									</ul>
-									<p>Neutrone® N5SE Series Side Entry Mixers are a reliable, safe, and efficient solution for industrial mixing applications, particularly in large tank installations. Their gear-driven design, space-saving configuration, and safety features make them an ideal choice for industries such as chemical processing, wastewater treatment, food production, and oil refining. Whether you need to handle high-viscosity fluids, large-scale blending, or operate in confined spaces, the Neutrone® N5SE Series offers a robust and cost-effective alternative to traditional top-entry mixing systems.</p>
+									<p><strong>Neutrone® Side Entry Mixer (N5SE Series)</strong> are a reliable, safe, and efficient solution for industrial mixing applications, particularly in large tank installations. Their gear-driven design, space-saving configuration, and safety features make them an ideal choice for industries such as chemical processing, wastewater treatment, food production, and oil refining. Known to be robust, cost-effective alternatives to traditional top-entry mixing systems for handling high-viscosity fluids, large-scale blending, and working in confined spaces.</p>
 								</div>
 							</div>
 						</div>
