--- a/products/nms.html
+++ b/products/nms.html
@@ -27,76 +27,68 @@
 
 <body>
 
-	<div class="top-bar-area">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-4">
-					<div class="header-logo">
-						<a href="../index.html"><img src="../assets/images/logo1.png" alt="logo"></a>
-					</div>
+<div class="top-bar-area header-area" id="sticky-header">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-2">
+				<div class="header-logo">
+					<a href="../index.html"><img class="w-100" src="../assets/images/logo1.png" alt="logo"></a>
 				</div>
-				<div class="col-md-8">
-					<div class="top-bar-info text-end">
-						<ul class="d-inline-flex align-items-center">
-							<li>
-								<div class="d-inline-flex">
-									<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
-									<p class="mb-0 text-light">
-										Contact Us
-										<span class="d-block fw-bold text-dark">+603-8062 5093</span>
-									</p>
-								</div>
-							</li>
-							<li>
-								<div class="header-search-button search-box-outer">
-									<a href="#"><i class="bi bi-search"></i></a>
-								</div>
-							</li>
-						</ul>
-					</div>
+			</div>
+			<div class="d-flex justify-content-end col-md-8">
+				<div class="header-menu">
+					<ul class="nav_scroll">
+						<li><a href="../index.html">Home</a></li>
+						<li><a href="../about.html">About Us</a></li>
+						<li><a href="../products.html">Products</a></li>
+						<li><a href="../gallery.html">Gallery</a></li>
+						<li><a href="../careers.html">Careers</a></li>
+						<li><a href="../contact.html">Contacts Us</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-md-2">
+				<div class="header-button">
+					<a href="../contact.html#contact_form">Get a Quote</a>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 
-	<div class="header-area" id="sticky-header">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-9">
-					<div class="header-menu">
-						<ul class="nav_scroll">
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="../about.html">Corporate Information</a></li>
-							<li><a href="../products.html">Products</a></li>
-							<li><a href="../gallery.html">Gallery</a></li>
-							<li><a href="#">Careers</a></li>
-							<li><a href="../contact.html">Contacts</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="header-button">
-						<a href="../contact.html#contact_form">Get a Quote</a>
-					</div>
+<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
+	<div class="mobile-menu">
+		<nav class="header-menu">
+			<ul class="nav_scroll">
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="../about.html">About Us</a></li>
+				<li><a href="../products.html">Products</a></li>
+				<li><a href="../gallery.html">Gallery</a></li>
+				<li><a href="../careers.html">Careers</a></li>
+				<li><a href="../contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+	</div>
+</div>
+
+
+<div class="breadcumb-area d-flex align-items-center">
+	<div class="container">
+		<div class="row d-flex align-items-center">
+			<div class="col-lg-12">
+				<div class="breadcumb-content">
+					<h1>Mixers</h1>
+					<ul>
+						<li><i class="fas fa-house-user"></i><a href="../index.html">Home</a></li>
+						<li><a href="../products.html">Products</a></li>
+						<li><a href="../mixers.html">Mixers</a></li>
+						<li>N5SE Series</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
-		<div class="mobile-menu">
-			<nav class="header-menu">
-				<ul class="nav_scroll">
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="../about.html">Corporate Information</a></li>
-					<li><a href="../products.html">Products</a></li>
-					<li><a href="../gallery.html">Gallery</a></li>
-					<li><a href="#">Careers</a></li>
-					<li><a href="../contact.html">Contacts</a></li>
-				</ul>
-			</nav>
-		</div>
-	</div>
+</div>
 
 
 <div class="breadcumb-area d-flex align-items-center">
@@ -132,8 +124,8 @@
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p>Neutrone® In-Liner Static Mixers (NMS/NMSR Series) is a high-performance mixing solution designed to efficiently blend liquids, gases, and solids without the need for moving parts. These mixers offer a wide range of customization options and are available in various materials and diameters, making them ideal for a broad spectrum of industrial applications. Here's an overview of its key features and benefits:</p>
-										<p class="pb_30">Key Features of Neutrone® In-Line Static Mixers, (NMS/NMSR Series):</p>
+										<p><strong>Neutrone® In-Liner Static Mixers (NMS/NMSR Series)</strong> is a high-performance mixing solution designed to efficiently blend liquids, gases, and solids without the need for moving parts. These mixers offer a wide range of customization options and are available in various materials and diameters, making them ideal for a broad spectrum of industrial applications. Here's an overview of its key features and benefits:</p>
+										<p class="pb_30"><strong>Key Features & Benefits:</strong></p>
 									</div>
 								</div>
 							</div>
