--- a/products/n1.html
+++ b/products/n1.html
@@ -113,7 +113,7 @@
 								<div class="product-details-content">
 									<div class="product-details-desc">
 										<p><b>Neutrone® Top Entry (Light/Medium/Heavy Duty) Mixers, N Series</b> are designed to efficiently handle a range of mixing tasks, from light to medium viscosity materials, with capabilities for both high flow and high shear agitation. These mixers are ideal for small batch operations as well as continuous processes, providing versatility across different industrial applications.</p>
-										<p class="pb_30">Key Features & Benefits</p>
+										<p class="pb_30"><strong>Key Features & Benefits:</strong></p>
 									</div>
 								</div>
 							</div>
