--- a/products/nms.html
+++ b/products/nms.html
@@ -129,7 +129,7 @@
 										<h4>Wide Range of Diameters</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>Variety of sizes, ranging from 1/2 inch to 72 inches in diameter. This range allows for flexibility in both small-scale and large-scale applications, ensuring that you can find the right mixer for your system</p>
+										<p>Variety of sizes, ranging from 1/2 inch to 96 inches in diameter. This range allows for flexibility in both small-scale and large-scale applications, ensuring that you can find the right mixer for your system</p>
 									</div>
 								</div>								
 							</div>
@@ -154,7 +154,7 @@
 										<h4>Radial Mixing and Flow Division</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>Unique radial mixing and flow division design is key to the performance of the Neutrone® In-Line Static Mixers. This ensures that the materials (liquid, solid, or gas) are evenly distributed and mixed in a uniform manner throughout the system, which is critical for processes requiring high precision.</p>
+										<p>Unique radial mixing and flow division design is key to the performance. This ensures that the materials (liquid, solid, or gas) are evenly distributed and mixed in a uniform manner throughout the system, which is critical for processes requiring high precision.</p>
 									</div>
 								</div>	
 							</div>
@@ -197,18 +197,15 @@
 						</div>
 						<div class="col-lg-12">
 							<div class="product-details-content">
-								<div class="product-page-title2">
-									<h1>Benefits of Neutrone® In-Line Static Mixers:</h1>
-								</div>
 								<div class="product-details-desc">
 									<ul>
 										<li><strong>Low Maintenance:</strong> Since there are no moving parts, there’s minimal wear and tear, resulting in lower maintenance costs and longer service life.</li>
 										<li><strong>High Efficiency:</strong> These mixers provide consistent, high-efficiency mixing with minimal pressure drop. The radial mixing action ensures optimal blending of fluids and solids in a wide range of applications.</li>
 										<li><strong>Compact and Robust: </strong> Neutrone In-Line Static Mixers are designed to fit into tight spaces, making them ideal for installations where other mixing solutions might be too bulky or impractical.</li>
-										<li><strong>Energy Saving: </strong> With no need for external power, static mixers operate purely based on the flow energy of the process stream, leading to reduced operating costs and energy consumption.</li>
+										<li><strong>Energy Saving: </strong> No need for external power and operate purely based on the flow energy of the process stream, leading to reduced operating costs and energy consumption.</li>
 										<li><strong>Customization: </strong> Custom designs ensure that the mixers can be optimized for specific processes, whether you are mixing high-viscosity liquids, fine powders, or gas-liquid mixtures.</li>
 									</ul>
-									<p>The Neutrone® In-Line Static Mixers is a versatile and efficient solution for a wide range of mixing applications. With custom designs and materials, these mixers are ideal for industries that require precise and consistent mixing of liquids, solids, and gases. The radial mixing and flow division ensure uniform results, while the lack of moving parts reduces energy consumption and maintenance. Whether you're in chemical processing, food production, water treatment, or oil refining, Neutrone® In-Liner Static Mixers offer a reliable, cost-effective, and low-maintenance solution.</p>
+									<p><strong>Neutrone® In-Liner Static Mixer (NMS/NMSR Series)</strong> is a versatile and efficient solution for a wide range of mixing applications. With custom designs and materials, these mixers are ideal for industries that require precise and consistent mixing of liquids, solids, and gases. The radial mixing and flow division ensure uniform results, while the lack of moving parts reduces energy consumption and maintenance while also being reliable, cost-effective, and low-maintenance.</p>
 								</div>
 							</div>
 						</div>
