--- a/products/impeller.html
+++ b/products/impeller.html
@@ -27,76 +27,7 @@
 
 <body>
 
-	<div class="top-bar-area">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-4">
-					<div class="header-logo">
-						<a href="../index.html"><img src="../assets/images/logo1.png" alt="logo"></a>
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div class="top-bar-info text-end">
-						<ul class="d-inline-flex align-items-center">
-							<li>
-								<div class="d-inline-flex">
-									<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
-									<p class="mb-0 text-light">
-										Contact Us
-										<span class="d-block fw-bold text-dark">+603-8062 5093</span>
-									</p>
-								</div>
-							</li>
-							<li>
-								<div class="header-search-button search-box-outer">
-									<a href="#"><i class="bi bi-search"></i></a>
-								</div>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="header-area" id="sticky-header">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-9">
-					<div class="header-menu">
-						<ul class="nav_scroll">
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="../about.html">Corporate Information</a></li>
-							<li><a href="../products.html">Products</a></li>
-							<li><a href="../gallery.html">Gallery</a></li>
-							<li><a href="#">Careers</a></li>
-							<li><a href="../contact.html">Contacts</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="header-button">
-						<a href="../contact.html#contact_form">Get a Quote</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
-		<div class="mobile-menu">
-			<nav class="header-menu">
-				<ul class="nav_scroll">
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="../about.html">Corporate Information</a></li>
-					<li><a href="../products.html">Products</a></li>
-					<li><a href="../gallery.html">Gallery</a></li>
-					<li><a href="#">Careers</a></li>
-					<li><a href="../contact.html">Contacts</a></li>
-				</ul>
-			</nav>
-		</div>
-	</div>
+</strong>
 
 
 <div class="breadcumb-area d-flex align-items-center">
@@ -132,7 +63,7 @@
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p>Neutrone®’s range of impellers is designed to optimize mixing performance, reduce energy consumption, and lower both capital and operating costs across various industrial applications. The right impeller is crucial for achieving efficient mixing, and Neutrone® offers a modern selection that caters to different mixing needs, from high-efficiency flow to specialized applications like solid-liquid, liquid-liquid, and liquid-gas dispersion.</p>
+										<p><strong>Neutrone® Impellers</strong> range is designed to optimize mixing performance, reduce energy consumption, and lower both capital and operating costs across various industrial applications. The right impeller is crucial for achieving efficient mixing, and Neutrone® offers a modern selection that caters to different mixing needs, from high-efficiency flow to specialized applications like solid-liquid, liquid-liquid, and liquid-gas dispersion.</p>
 										<p class="pb_30"><strong>Neutrone® Impeller Range Overview:</strong></p>
 										<div class="product-details-desc">
 											<ul>
@@ -175,7 +106,7 @@
 												<li><strong>Lower Capital and Operating Costs:</strong> Neutrone impellers are engineered to reduce power consumption and wear, leading to lower energy costs and reduced maintenance needs. This results in overall cost savings throughout the life cycle of the mixing equipment.</li>
 												<li><strong>Customizable to Application Mode: </strong> The wide range of impeller types allows you to select the ideal solution for your specific application, whether it's solid-liquid mixing, liquid-liquid dispersion, or liquid-gas dispersion. This versatility ensures that your mixing process is tailored for maximum efficiency and performance.</li>
 											</ul>
-											<p>Neutrone®'s impeller range offers highly efficient, cost-effective solutions for various industrial mixing needs. Whether you are dealing with high-flow liquid mixing, solid-liquid dispersion, or gas-liquid interactions, Neutrone® impellers provide optimal performance, reduced energy consumption, and cost savings. Their customizable designs and advanced engineering ensure that Neutrone impellers are well-suited for a wide variety of industries, including chemical processing, food production, biotechnology, and wastewater treatment.</p>
+											<p><strong>Neutrone®'s impeller</strong> range offers highly efficient, cost-effective solutions for various industrial mixing needs. Whether you are dealing with high-flow liquid mixing, solid-liquid dispersion, or gas-liquid interactions, Neutrone® impellers provide optimal performance, reduced energy consumption, and cost savings. Their customizable designs and advanced engineering ensure that Neutrone impellers are well-suited for a wide variety of industries, including chemical processing, food production, biotechnology, and wastewater treatment.</p>
 										</div>
 									</div>
 								</div>
