--- a/products/cl.html
+++ b/products/cl.html
@@ -120,7 +120,7 @@
 							<h4> Downloads </h4>
 						</div>
 						<div class="pdf-button">
-							<a target="_blank" href="../assets/docs/cll_brochure.PDF"><img src="../assets/images/resource/pdf.png" alt="">Brochure<i class="bi bi-chevron-bar-down"></i></a>
+							<a target="_blank" href="../assets/docs/cll_brochure.pdf"><img src="../assets/images/resource/pdf.png" alt="">Brochure<i class="bi bi-chevron-bar-down"></i></a>
 						</div>
 					</div>
 				</div>
